tests/specs/run/bare_specifier_without_import/main.out
error: Relative import path "@std/dotenv/load" not prefixed with / or ./ or ../
  hint: If you want to use a JSR or npm package, try running `deno add jsr:@std/dotenv/load` or `deno add npm:@std/dotenv/load`
    at [WILDCARD]bare_specifier_without_import/main.ts:1:8
